src/tests/testfiles/function-declarations/13.txt
Error at 1:14: Parameter has incomplete type
int iojiofej(void a) {
             ^
